RESOLVED FIXED96258
[Qt] Fix deprecation failures, sync with Qt5
https://bugs.webkit.org/show_bug.cgi?id=96258
Summary [Qt] Fix deprecation failures, sync with Qt5
Kevin Funk
Reported 2012-09-10 04:35:02 PDT
[Qt] Fix deprecation failures, sync with Qt5
Attachments
Patch (7.82 KB, patch)
2012-09-10 04:49 PDT, Kevin Funk
no flags
Patch (replace other deprecated methods) (9.28 KB, patch)
2012-09-10 05:01 PDT, Kevin Funk
no flags
Patch v2 (9.31 KB, patch)
2012-09-10 05:26 PDT, Kevin Funk
no flags
Kevin Funk
Comment 1 2012-09-10 04:49:14 PDT
Kevin Funk
Comment 2 2012-09-10 05:01:20 PDT
Created attachment 163092 [details] Patch (replace other deprecated methods)
WebKit Review Bot
Comment 3 2012-09-10 05:06:20 PDT
Attachment 163092 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebKit2/Platform/CoreIPC/unix/ConnectionUnix.cpp:43: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Kevin Funk
Comment 4 2012-09-10 05:26:42 PDT
Created attachment 163097 [details] Patch v2
WebKit Review Bot
Comment 5 2012-09-10 06:07:51 PDT
Comment on attachment 163097 [details] Patch v2 Clearing flags on attachment: 163097 Committed r128051: <http://trac.webkit.org/changeset/128051>
WebKit Review Bot
Comment 6 2012-09-10 06:07:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.