[Qt] Fix deprecation failures if QT_NO_DEPRECATED enabled https://bugs.webkit.org/show_bug.cgi?id=96258

Patch by Kevin Funk <kevin.funk@kdab.com> on 2012-09-10
Reviewed by Simon Hausmann.

Sync with latest changes in Qt5.

Source/WebCore:

* platform/qt/RenderThemeQt.cpp:
* platform/qt/SharedTimerQt.cpp:

Source/WebKit2:

* WebProcess/WebCoreSupport/qt/WebErrorsQt.cpp:
* WebProcess/qt/WebProcessQt.cpp:

Canonical link: https://commits.webkit.org/114146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128051 268f45cc-cd09-0410-ab3c-d52691b4dbfc