Source/WebCore/platform/qt/RenderThemeQt.cpp
@@ -867,7 +867,7 @@ String RenderThemeQt::fileListNameForWidth(const FileList* fileList, const Font&
         int n = fileList->length();
         string = QCoreApplication::translate("QWebPage", "%n file(s)",
                                              "number of chosen file",
-                                             QCoreApplication::DefaultCodec, n);
+                                             n);
     }
 
     return string;
